2010-10-27  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-group.el (gnus-group-completing-read)
	(gnus-read-ephemeral-bug-group): Replace replace-regexp-in-string with
	gnus-replace-in-string.

2010-10-26  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shr.el (shr-tag-div): Added.

2010-10-25  Julien Danjou  <julien@danjou.info>

	* gnus-util.el: Remove `gnus-with-local-quit'.

	* gnus-demon.el (gnus-demon-init): Use run-with-idle-timer function.

2010-10-25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-sum.el (gnus-summary-select-article): Fix type error in checking
	the original article buffer.

2010-10-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-head): New function.
	(nnimap-request-move-article): Try to be slighly faster by not
	requesting the entire message when moving.
	(nnimap-transform-headers): Don't bug out on bodiless articles.
	(nnimap-send-command): Have no outstanding messages if the IMAP server
	doesn't support streaming.
	(nnimap-transform-headers): Fold {quoted} strings more sloppily.

2010-10-24  Julien Danjou  <julien@danjou.info>

	* message.el (message-default-headers): Fix type.

2010-10-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-html.el (gnus-html-prefetch-images): Decode entities before
	prefetching images.

	* gnus-sum.el (gnus-group-make-articles-read): Propagate marks to the
	backend for unknown groups.  This is mainly useful for nnimap groups.

	* gnus-agent.el (gnus-agent-fetch-group): Don't download stuff if the
	group isn't covered by the agent.

2010-10-22  Andrew Cohen  <cohen@andy.bu.edu>

	* nnir.el (nnir-method-default-engines): new variable.
	(nnir-run-query): use it.
	(nnir-group-mode-hook): remove key binding and move to gnus-group.el.
	(gnus-summary-nnir-goto-thread): change group if needed.

	* gnus-group.el (gnus-group-group-map): add key binding for
	gnus-group-make-nnir-group.

2010-10-24  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-tag-object): Added.
